--- a/package.json
+++ b/package.json
@@ -1,15 +1,36 @@
 {
-  "name": "trello-api",
-  "type": "module",
+  "name": "nodejs-expressjs-mongodb-base-project",
+  "private": true,
   "version": "1.0.0",
-  "description": "back-end practice",
-  "main": "src/server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "author": "TrungQuanDev - Một Lập Trình Viên",
+  "description": "https://youtube.com/@trungquandev",
+  "engines": {
+    "node": ">=18.x"
   },
-  "author": "tttduong",
-  "license": "ISC",
+  "scripts": {
+    "lint": "eslint src --ext js --report-unused-disable-directives --max-warnings 0",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel ./src -d ./build/src",
+    "build": "npm run clean && npm run build-babel",
+    "production": "npm run build && node ./build/src/server.js",
+    "dev": "nodemon --exec babel-node ./src/server.js"
+  },
   "dependencies": {
-    "express": "^4.21.2"
+    "@babel/runtime": "^7.22.10",
+    "async-exit-hook": "^2.0.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "mongodb": "^6.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/node": "^7.22.10",
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.47.0",
+    "nodemon": "^3.0.1"
   }
 }
